--- a/mogpt.ipynb
+++ b/mogpt.ipynb
@@ -2,172 +2,113 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import numpy as np\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<_io.BufferedReader name='/Users/m.elmasri/src/moGPT/data/train.bin'>\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import numpy as np\n",
+    "import os\n",
+    "from constants import BLOCK_SIZE, BATCH_SIZE, VOCAB_SIZE\n",
+    "from model import BigramLanguageModel\n",
+    "from train import get_batch\n",
+    "from torch.nn import functional as F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Loading binary data\n",
     "path_to_local_dir = os.getcwd()\n",
-    "with open(f\"{path_to_local_dir}/data/train.bin\", 'rb') as file\n",
+    "with open(f\"{path_to_local_dir}/data/shakespeare/train.bin\", 'rb') as file:\n",
     "    train = file.read()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "b'J\\x17#W\\x19\\x00\\xc6\\x00\\xe5 '"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train[:10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "block size: 4, batch size: 8\n"
+      "when the context is tensor([29296]) the target is 34\n",
+      "when the context is tensor([29296,    34]) the target is 3843\n",
+      "when the context is tensor([29296,    34,  3843]) the target is 9399\n",
+      "when the context is tensor([29296,    34,  3843,  9399]) the target is 25\n",
+      "when the context is tensor([374]) the target is 29319\n",
+      "when the context is tensor([  374, 29319]) the target is 3297\n",
+      "when the context is tensor([  374, 29319,  3297]) the target is 407\n",
+      "when the context is tensor([  374, 29319,  3297,   407]) the target is 351\n",
+      "when the context is tensor([832]) the target is 477\n",
+      "when the context is tensor([832, 477]) the target is 11906\n",
+      "when the context is tensor([  832,   477, 11906]) the target is 32375\n",
+      "when the context is tensor([  832,   477, 11906, 32375]) the target is 2236\n",
+      "when the context is tensor([407]) the target is 1865\n",
+      "when the context is tensor([ 407, 1865]) the target is 17767\n",
+      "when the context is tensor([  407,  1865, 17767]) the target is 13\n",
+      "when the context is tensor([  407,  1865, 17767,    13]) the target is 198\n",
+      "when the context is tensor([2053]) the target is 82\n",
+      "when the context is tensor([2053,   82]) the target is 287\n",
+      "when the context is tensor([2053,   82,  287]) the target is 616\n",
+      "when the context is tensor([2053,   82,  287,  616]) the target is 27517\n",
+      "when the context is tensor([314]) the target is 716\n",
+      "when the context is tensor([314, 716]) the target is 11\n",
+      "when the context is tensor([314, 716,  11]) the target is 198\n",
+      "when the context is tensor([314, 716,  11, 198]) the target is 40\n",
+      "when the context is tensor([13]) the target is 198\n",
+      "when the context is tensor([ 13, 198]) the target is 23318\n",
+      "when the context is tensor([   13,   198, 23318]) the target is 502\n",
+      "when the context is tensor([   13,   198, 23318,   502]) the target is 617\n",
+      "when the context is tensor([10695]) the target is 22027\n",
+      "when the context is tensor([10695, 22027]) the target is 262\n",
+      "when the context is tensor([10695, 22027,   262]) the target is 13360\n",
+      "when the context is tensor([10695, 22027,   262, 13360]) the target is 287\n"
      ]
     }
    ],
    "source": [
-    "from constants import BLOCK_SIZE, BATCH_SIZE\n",
-    "print(f\"block size: {BLOCK_SIZE}, batch size: {BATCH_SIZE}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "603928"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(train) - BLOCK_SIZE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ix = torch.randint(len(train) - BLOCK_SIZE, (BATCH_SIZE,))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([198863, 405154,  88998, 521762, 175796, 336810, 497142,  50821])"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "expected np.ndarray (got bytes)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[26], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m x \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mstack([\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_numpy\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m:\u001b[49m\u001b[43mi\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mBLOCK_SIZE\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m ix])\n",
-      "\u001b[0;31mTypeError\u001b[0m: expected np.ndarray (got bytes)"
-     ]
-    }
-   ],
-   "source": [
-    "x = torch.stack([torch.from_numpy((train[i:i+BLOCK_SIZE])) for i in ix])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "expected np.ndarray (got bytes)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[27], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m [\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_numpy\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m:\u001b[49m\u001b[43mi\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mBLOCK_SIZE\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m ix]\n",
-      "\u001b[0;31mTypeError\u001b[0m: expected np.ndarray (got bytes)"
-     ]
-    }
-   ],
-   "source": [
-    "[torch.from_numpy((train[i:i+BLOCK_SIZE])) for i in ix]"
+    "for b in range(BATCH_SIZE):\n",
+    "    for t in range(BLOCK_SIZE):\n",
+    "        context = x[b, :t+1]\n",
+    "        target = y[b, t]\n",
+    "        print(f\"when the context is {context} the target is {target}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/m.elmasri/miniconda3/envs/mogpt/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
-    "from train import get_batch"
+    "\n",
+    "model = BigramLanguageModel(VOCAB_SIZE)\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.01)"
    ]
   },
   {
@@ -176,47 +117,80 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[  301, 14210,   407,  2121],\n",
-      "        [ 1309,  8028,   290,  4736],\n",
-      "        [  683,   345,   466, 31651],\n",
-      "        [ 1537,    11,  1560,   502],\n",
-      "        [ 1677,    40,  2937,    25],\n",
-      "        [   25,   198, 16773,    11],\n",
-      "        [   13,   198,   198,    35],\n",
-      "        [  198,  1890, 10013,   534]])\n"
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdata\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([[  301, 14210,   407,  2121],\n",
-       "         [ 1309,  8028,   290,  4736],\n",
-       "         [  683,   345,   466, 31651],\n",
-       "         [ 1537,    11,  1560,   502],\n",
-       "         [ 1677,    40,  2937,    25],\n",
-       "         [   25,   198, 16773,    11],\n",
-       "         [   13,   198,   198,    35],\n",
-       "         [  198,  1890, 10013,   534]]),\n",
-       " tensor([[14210,   407,  2121,   503],\n",
-       "         [ 8028,   290,  4736,   307],\n",
-       "         [  345,   466, 31651,   502],\n",
-       "         [   11,  1560,   502,    11],\n",
-       "         [   40,  2937,    25,   198],\n",
-       "         [  198, 16773,    11,  1282],\n",
-       "         [  198,   198,    35,    52],\n",
-       "         [ 1890, 10013,   534,  1029]]))"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_batch('train')"
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from train import get_batch\n",
+    "data, targets = get_batch('train')\n",
+    "optimizer.zero_grad()\n",
+    "logits = model(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "B, T, C = logits.shape\n",
+    "targets = targets.view(B*T)\n",
+    "logits = logits.view(B*T, C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss=tensor(11.7273, grad_fn=<NllLossBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "loss = F.cross_entropy(logits, targets)\n",
+    "print(f'{loss=}')\n",
+    "loss.backward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "F.softmax(logits, dim=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from train import train\n",
+    "train(model, optimizer, 1)"
    ]
   },
   {
