added dropput to multi head attension.

--- a/mogpt.ipynb
+++ b/mogpt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
     "import numpy as np\n",
     "import math\n",
     "import os\n",
-    "from constants import BLOCK_SIZE, BATCH_SIZE, VOCAB_SIZE, N_EMBED, DEVICE, BIAS, N_HEADS, N_LAYERS\n",
+    "from constants import BLOCK_SIZE, BATCH_SIZE, VOCAB_SIZE, N_EMBED, DEVICE, BIAS, N_HEADS, N_LAYERS, DROP_OUT\n",
     "from model import BigramLanguageModel\n",
     "from train import get_batch\n",
     "from torch.nn import functional as F\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "torch.Size([8, 4, 768])"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,13 +161,21 @@
     "config = {\"n_heads\": N_HEADS, \n",
     "          \"n_embed\": N_EMBED,\n",
     "          \"n_layers\": N_LAYERS, \n",
-    "          \"bias\": BIAS}\n",
+    "          \"bias\": BIAS, \n",
+    "          'dropout': DROP_OUT}\n",
     "config\n",
     "\n",
     "from model import MultiHeadAttention\n",
     "mha = MultiHeadAttention(config)\n",
     "mha(tx).shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
