added training to fine-tuning

--- a/Fine-tunning.ipynb
+++ b/Fine-tunning.ipynb
@@ -156,6 +156,24 @@
     "for i in range(len(y)): \n",
     "   print(f\" targets: \\t\\t {decode(targets[i,-num_predictions:].tolist())}, \\n prediction: \\t\\t {decode(y[i,-num_predictions:].tolist())} \\n *-----------------*\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Finetuning on new dataset\n",
+    "# To use wandb set \n",
+    "# WANDB_LOG=True and WANDB_KEY in constants.py\n",
+    "# adjust INPUT_DATA_FOLDER in constants.py\n",
+    "\n",
+    "from train import train\n",
+    "optimizer = torch.optim.Adam(pretrained_mogpt.parameters(), lr=0.01)\n",
+    "optimizer.zero_grad()\n",
+    "train(model=pretrained_mogpt, optimizer=optimizer, num_epochs=10)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
