--- a/Fine-tunning.ipynb
+++ b/Fine-tunning.ipynb
@@ -33,6 +33,7 @@
     "## Loading GPT-2\n",
     "from model import GPT\n",
     "from train import get_batch\n",
+    "import torch\n",
     "\n",
     "## Loading word encoder/decoder\n",
     "import tiktoken\n",
