saving fine tunned model

--- a/Fine-tunning.ipynb
+++ b/Fine-tunning.ipynb
@@ -175,6 +175,18 @@
     "train(model=pretrained_mogpt, optimizer=optimizer, num_epochs=10)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "## Saving the model\n",
+    "torch.save(pretrained_mogpt.state_dict(), 'finetunned_model.pth')\n"
+   ]
   }
  ],
  "metadata": {
